# Refactoring-Katas

GildedRose/cpp/: CMakeLists.txt
Tennis/cpp/: CMakeLists.txt
Yahtzee/cpp/: CMakeLists.txt  yahtzee.cpp
