cmake_minimum_required(VERSION 3.12)
project(TennisKata)
enable_testing()

add_library(tennistests all_tests.cpp all_tests.hpp test_suite.tests.cpp)
add_executable(test1 tennis1.cc)
target_link_libraries(test1 tennistests)
add_test(NAME test1 COMMAND test1)
add_executable(test2 tennis2.cc)
target_link_libraries(test2 tennistests)
add_test(NAME test2 COMMAND test2)
add_executable(test3 tennis3.cc)
target_link_libraries(test3 tennistests)
add_test(NAME test3 COMMAND test3)
